--- a/Group_Page/css/ljh.css
+++ b/Group_Page/css/ljh.css
@@ -77,3 +77,28 @@ hr {
 .info > div {
   margin-bottom: 10px;
 }
+.goalTitle {
+  margin: 50px 0px 50px 0px;
+}
+.card-body {
+  padding: 20px;
+}
+.card-title {
+  color: red;
+  font-weight: 600;
+}
+.card {
+  padding: 48px;
+  border-radius: 8px;
+  border: 2px solid red;
+}
+.card > img {
+  width: 50%;
+  height: 50%;
+  margin: auto;
+  margin-bottom: 24px;
+}
+p.card-text {
+  margin-top: 16px;
+  font-weight: 600;
+}
