--- a/Group_Page/css/ljh.css
+++ b/Group_Page/css/ljh.css
@@ -76,6 +76,8 @@ hr {
 }
 .info > div {
   margin-bottom: 10px;
+.goalContainer {
+  padding: 5% 10% 5% 10%;
 }
 .goalTitle {
   margin: 50px 0px 50px 0px;
