feat(ljh) : header 타이틀 글자색 변경

--- a/Group_Page/css/ljh.css
+++ b/Group_Page/css/ljh.css
@@ -9,6 +9,10 @@ h5 {
 body {
   font-size: 16px;
 }
+header > #titleName {
+  color: white;
+  font-size: large;
+}
 .w3-half img {
   margin-bottom: -6px;
   margin-top: 16px;
