--- a/Group_Page/css/shs.css
+++ b/Group_Page/css/shs.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Dongle:wght@300&family=Stylish&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Dongle:wght@300&family=Stylish&display=swap");
 
 body,
 h1,
@@ -13,6 +13,11 @@ body {
   font-size: 16px;
 }
 
+#titleName {
+  color: white;
+  font-size: large;
+}
+
 .section-about {
   display: flex;
   justify-content: center;
@@ -21,7 +26,6 @@ body {
   padding: 80px 0 140px 0;
   margin: 0 0 140px 0;
 }
-
 
 .section-about h2 {
   margin: 0 auto 100px;
@@ -38,15 +42,14 @@ body {
   font-size: 22px;
   font-family: "GmarketBold";
   color: red;
-  
 }
-.self{
-  font-family: 'Stylish', sans-serif;
+.self {
+  font-family: "Stylish", sans-serif;
 }
 
 .txt-about {
   margin-top: 55px;
-  font-family: 'Stylish', sans-serif;
+  font-family: "Stylish", sans-serif;
 }
 
 .txt-about dd {
@@ -87,6 +90,6 @@ body {
   padding: 5px;
   margin-bottom: 10px;
 }
-.con{
+.con {
   text-align: center;
 }
