fix(ljh) : 이미지 패스 변경, 필요없는 css 주석

--- a/Group_Page/css/ljh.css
+++ b/Group_Page/css/ljh.css
@@ -61,7 +61,7 @@ hr {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  gap: 1rem;
+  /* gap: 1rem; */
 }
 .introduceList > div {
   text-align: center;
