--- a/Group_Page/css/shs.css
+++ b/Group_Page/css/shs.css
@@ -41,7 +41,7 @@ body {
   width: 110px;
   font-size: 22px;
   font-family: "GmarketBold";
-  color: red;
+  color: #ffaaaa;
 }
 .self {
   font-family: "Stylish", sans-serif;
@@ -85,11 +85,16 @@ body {
 }
 
 .info-about div {
-  border: 4px solid red;
+  border: 4px solid #ffaaaa;
   border-radius: 4px;
   padding: 5px;
   margin-bottom: 10px;
 }
 .con {
   text-align: center;
+}
+.w3-red,
+.w3-hover-red:hover {
+  color: #fff !important;
+  background-color: #ffaaaa !important;
 }
