feat(all) : 개인페이지 링크 제작, css
- a태그 호버, 색상 변경

--- a/Group_Page/css/ljh.css
+++ b/Group_Page/css/ljh.css
@@ -22,6 +22,15 @@ body {
 .w3-half img:hover {
   opacity: 1;
 }
+a {
+  color: #ffaaaa;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #ffaaaa;
+}
+
 #about,
 #introduce {
   text-align: center;
